# github_repo_opener

./: Pipfile  README.md  README.rst  fabfile.py  github_repo_opener.py  pyproject.toml  setup.cfg  setup.py
github_repo_opener/: __init__.py  __version__.py
