[tool.poetry]
name = "github_repo_opener"
version = "0.1.2"
description = ""
authors = ["Goto Hayato <habita.gh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"
click = "^6.0"
peewee = "^3.0.0"
prompt-toolkit = "^2.0"
pygithub = "^1.0"

[tool.poetry.dev-dependencies]
fabric3 = "^1.14"
twine = "^1.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
